methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:22: error: illegal start of simple pattern
    if (!estFaceMur){
    ^SlugSnail:32: error: '=' expected but '}' found.
    }
    ^