methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
	while (isFacingTrail()){
    if (!estSurBiscuit()){
      forward()
      baisseBrosse()
      leveBrosse()
    }
    else {
      baisseBrosse()
      leveBrosse()
      prendBiscuit()
      return true
    }
  }  
  prendBiscuit()  
 }

def isFacingTrail():Boolean = {
  while (!estSurBiscuit){
    var 
    if (!estFaceMur){
      if (getGroundColor()==x){
        backward ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }